[package]
name = "rust1"
version = "0.1.0"
authors = ["Manuel Villing <manuel.villing@gmail.com>"]

[dependencies]
rand = "0.4.0"
hyper = "0.10.13"
reqwest = "0.6.2"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
chrono = "0.4"
hmac = "0.5"
sha2 = "0.7"
base64 = "0.9.2"

[lib]
name = "lib"
crate-type = ["staticlib"]