[package]
name = "kraken_rust_api_client"
version = "0.1.0"
authors = ["Manuel Villing <manuel.villing@gmail.com>"]

categories = ["api-bindings"]
description = "Client for the kraken.com API (public, private)"
homepage = "https://github.com/theotow/kraken-rust-api-client"
keywords = ["kraken", "api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/theotow/kraken-rust-api-client"

[dependencies]
rand = "0.4"
hyper = "0.10"
reqwest = {version = "0.9", features = ["rustls"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
hmac = "0.5"
sha2 = "0.7"
base64 = "0.9"

[lib]
name = "lib"
crate-type = ["staticlib"]